started creating site with flexbox

--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haukai</title>
+<!DOCTYPE html> <!-- tells the browser that this is html5-->
+<html lang="en"> <!--top level element of the page. lang defines the page language. good for screen readers-->
+<head> <!-- holds the metadata which the browser reads-->
+    <meta charset="UTF-8"> <!--encoding type-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--document mode for internet explorer (compatibility)-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
+    <title>Haukai Restaurant</title> <!--the title which displays on the tab/window-->
+    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <!--this is the end of the head boilerplate (thanks emmet)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptibely initiating this connection-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins font-->
 </head>
 <body>
-    
+    <div class="fbc"> <!--creates the flex box container class-->
+        <div class="item">Item 1</div>
+        <div class="item">Item 2</div>
+        <div class="item">Item 3</div>
+        <div class="item">Item 4</div>
+    </div>
 </body>
 </html>
