begin with navbar and header

--- a/index.html
+++ b/index.html
@@ -12,11 +12,40 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins font-->
 </head>
 <body>
-    <div class="fbc"> <!--creates the flex box container class-->
-        <div class="item">Item 1</div>
-        <div class="item">Item 2</div>
-        <div class="item">Item 3</div>
-        <div class="item">Item 4</div>
-    </div>
+    <nav class="navbar"> <!--creates the navbar class-->
+        <div class="fbc"> <!--creates the flex box container class-->
+            <div class="logo">Haukai Restaurant</div>
+            <ul class="navigation">
+                <li>
+                    <a href="Home">Home</a>
+                </li>
+                <li>
+                    <a href="Menu">Menu</a>
+                </li>
+                <li>
+                    <a href="Reservations">Reservations</a>
+                </li>
+                <li>
+                    <a href="Hours">Hours</a>
+                </li>
+                <li>
+                    <a href="Contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="header">
+        <div class="fbc">
+            <div>
+                <h1>Header 1</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, iste saepe. 
+                    Impedit exercitationem maiores tenetur architecto provident possimus, 
+                    earum animi delectus qui aspernatur, laborum aut corrupti libero iste. Iusto, velit!
+                </p>
+            </div>
+            <img src="" alt="">
+        </div>
+    </header>
 </body>
 </html>
