created navbar flex box

--- a/index.html
+++ b/index.html
@@ -44,8 +44,29 @@
                     earum animi delectus qui aspernatur, laborum aut corrupti libero iste. Iusto, velit!
                 </p>
             </div>
-            <img src="" alt="">
+            <img src="https://via.placeholder.com/300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
         </div>
     </header>
+    <section class="section">
+        <div class="fbc">
+            <div class="sectionpart">
+                <h2>Header 2</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
+                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
+                </p>
+            </div>
+            <div class="sectionpart">
+                <h2>Header 2</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
+                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
+                </p>
+            </div>
+            
+        </div>
+    </section>
 </body>
 </html>
