started comments to save me grief later

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!--encoding type-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--document mode for internet explorer (compatibility)-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
-    <title>Haukai Restaurant</title> <!--the title which displays on the tab/window-->
+    <title>Haukai Restaurant | Home</title> <!--the title which displays on the tab/window-->
     <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
     <!--this is the end of the head boilerplate (thanks emmet)-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptibely initiating this connection-->
@@ -13,7 +13,7 @@
 </head>
 <body>
     <nav class="navbar"> <!--creates the navbar class-->
-        <div class="fbc"> <!--creates the flex box container class-->
+        <div class="fbc"> <!--creates the flex box container class inside the navbar-->
             <div class="logo">Haukai Restaurant</div>
             <ul class="navigation">
                 <li>
@@ -35,8 +35,8 @@
         </div>
     </nav>
 
-    <header class="header">
-        <div class="fbc">
+    <header class="header"> <!--creates the navbar class-->
+        <div class="fbc"> <!--uses the flex box container class within the header class-->
             <div>
                 <h1>Header 1</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, iste saepe. 
@@ -47,9 +47,9 @@
             <img src="https://via.placeholder.com/300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
         </div>
     </header>
-    <section class="section">
-        <div class="fbc">
-            <div class="sectionpart">
+    <section class="section"> <!--creates the navbar class-->
+        <div class="fbc"> <!--uses the flex box container class within the header class-->
+            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
                 <h2>Header 2</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
@@ -57,7 +57,7 @@
                     Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
                 </p>
             </div>
-            <div class="sectionpart">
+            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
                 <h2>Header 2</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
