--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Haukai Restaurant | Home</title> <!--the title which displays on the tab/window-->
     <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
     <!--this is the end of the head boilerplate (thanks emmet)-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptibely initiating this connection-->
+    <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins font-->
 </head>
