create menu page. index draft complete

--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> <!--encoding type-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--document mode for internet explorer (compatibility)-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
-    <title>Haukai Restaurant | Home</title> <!--the title which displays on the tab/window-->
+    <title>Haukai Restaurant | Menu</title> <!--the title which displays on the tab/window-->
     <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
@@ -18,7 +18,7 @@
             <div class="logo">Haukai Restaurant</div>
             <ul class="navigation">
                 <li>
-                    <a href="Home">Home</a>
+                    <a href=index.html>Home</a>
                 </li>
                 <li>
                     <a href=menu.html>Menu</a>
@@ -39,7 +39,7 @@
     <header class="header"> <!--creates the header class-->
         <div class="fbc"> <!--uses the flex box container class within the header class-->
             <div>
-                <h1>Welcome to Haukai Restaurant</h1>
+                <h1>Menu</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, iste saepe. 
                     Impedit exercitationem maiores tenetur architecto provident possimus, 
                     earum animi delectus qui aspernatur, laborum aut corrupti libero iste. Iusto, velit!
