added kumara image to menu header

--- a/menu.html
+++ b/menu.html
@@ -40,12 +40,10 @@
         <div class="fbc"> <!--uses the flex box container class within the header class-->
             <div>
                 <h1>Menu</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, iste saepe. 
-                    Impedit exercitationem maiores tenetur architecto provident possimus, 
-                    earum animi delectus qui aspernatur, laborum aut corrupti libero iste. Iusto, velit!
+                <p>Only the freshest ingredients are used in our offerings to you!
                 </p>
             </div>
-        <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
+        <img src="images/kumara.png" alt="Fresh Kumara">
         </div>
     </header>
     <section class="section"> <!--creates the section class-->
