--- a/contact.html
+++ b/contact.html
@@ -12,6 +12,7 @@
 
 </head>
 <body>
+    <main>
     <nav class="navbar"> <!--creates the navbar class-->
         <div class="fbc"> <!--creates the flex box container class inside the navbar-->
             
@@ -80,6 +81,7 @@
                        
         </div>
     </section>
+    </main>
     <footer>
         <div class="fbc"> <!--flex box container class inside the footer-->
             <p>&copy; 2023 Haukai Restaurant</p>
