added agenda hours

--- a/hours.html
+++ b/hours.html
@@ -50,16 +50,18 @@
     </header>
     <section class="section"> <!--creates the section class-->
         <div class="flex-section"> <!-- uses the flex box container class within the section class -->
-            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
-                <h2>Section 1</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
-                </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">    
+            <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
+                <h2>Hours of Operation</h2>
+                <iframe 
+                    src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Pacific%2FAuckland&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&src=MTQ0Y2M1ODA5YTEyNGVkOGM4YmZiMWYxMGVlY2FiYzA2ZWU4ZTRkNWEwZGYyMmNlMTZhNmY4Njc2OWE1MDc5YUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23C0CA33" 
+                    style="border:solid 1px #777" 
+                    width="800" 
+                    height="600" 
+                    frameborder="0" 
+                    scrolling="no">
+                </iframe>
             </div>
-            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
+            <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>Section 2</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. 
