heading towards mvp

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     </nav>
 
     <header class="header"> <!--creates the header class-->
-        <div class="fbc"> <!--uses the flex box container class within the header class-->
+        <div class="fbc" class="wideimage"> <!--uses the flex box container class within the header class-->
             <div>
                 <h1>Welcome to Haukai Restaurant</h1>
                 
             </div>
-        <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
+        <img src="images/header_image.jpeg" alt="Alt text here">
         </div>
     </header>
     <section class="section"> <!--creates the section class-->
@@ -51,9 +51,7 @@
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>About Us</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
+                    Welcome to our restaurant, where we proudly celebrate the unique flavors and traditions of Maori and Pakeha cuisine. Our menu features a diverse range of dishes that draw inspiration from both indigenous and European culinary traditions, bringing together the best of both worlds. Our chefs are passionate about using fresh, local ingredients to create dishes that are both delicious and true to their cultural roots. We look forward to sharing a taste of Maori and Pakeha culture with you. 
                 </p>
                 <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">    
             </div>
