--- a/menu.html
+++ b/menu.html
@@ -49,8 +49,8 @@
                 <p>Discover the delicious world of Maori cuisine at our restaurant. We pride ourselves on using locally
                     sourced, indigenous ingredients to create authentic dishes that honor the traditions and heritage of
                     Aotearoa. From classic favorites to contemporary creations, our menu has something for everyone to
-                    enjoy.<br>
-                    If you prefer a downloadable version of our menu, it is available <a href="polrek.github.io/haukai/Haukai_Menu.pdf" target="_blank">here</a>.
+                    enjoy.<br><br>
+                    If you prefer a downloadable version of our menu, it is available <a href="Haukai_Menu.pdf" target="_blank">here</a>.
                 </p>
                 
             
