--- a/index.html
+++ b/index.html
@@ -51,27 +51,55 @@
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>About Us</h2>
                 <p>
-                    Welcome to our restaurant, where we proudly celebrate the unique flavors and traditions of Maori and Pakeha cuisine. Our menu features a diverse range of dishes that draw inspiration from both indigenous and European culinary traditions, bringing together the best of both worlds. Our chefs are passionate about using fresh, local ingredients to create dishes that are both delicious and true to their cultural roots. We look forward to sharing a taste of Maori and Pakeha culture with you. 
+                    Welcome to our restaurant, where we proudly celebrate the unique flavors and traditions of Māori and Pakeha cuisine. Our menu features a diverse range of dishes that draw inspiration from both indigenous and European culinary traditions, bringing together the best of both worlds. Our chefs are passionate about using fresh, local ingredients to create dishes that are both delicious and true to their cultural roots. We look forward to sharing a taste of Māori and Pakeha culture with you. 
                 </p>
                 <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">    
             </div>
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
-                <h2>Section 2</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
+                <h2>Karakia mō te Kai</h2>
+                <p> This karakia is a traditional blessing, presented below in Māori and English. <br><br>
+                    Nau mai e ngā hua,<br>
+                    o te wao,<br>
+                    o te ngakina,<br>
+                    o te wai tai,<br>
+                    o te wai Māori.<br>
+                    Nā Tane,<br>
+                    Nā Rongo,<br>
+                    Nā Tangaroa,<br>
+                    Nā Maru.<br>
+                    Ko Ranginui e tū iho nei,<br>
+                    Ko Papatūānuku e takoto nei.<br>
+                    Tūturu o whiti ka whakamaua kia tina! <em>TINA!</em><br>
+                    Hāumi e! Hui e! <em>TĀIKI E!</em>
                 </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
+                <iframe 
+                    width="560" 
+                    height="315" 
+                    src="https://www.youtube.com/embed/JAoS5Tv18x4" 
+                    title="YouTube video player" 
+                    frameborder="0" 
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    rel=0>
+                </iframe>
             </div>
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
-                <h2>Section 3</h2>
+                <h2>Blessing of Food</h2>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
+                    Welcome the gifts of food<br>
+                    from the sacred forests,<br>
+                    from the cultivated gardens,<br>
+                    from the sea,<br>
+                    from the fresh waters.<br>
+                    The food of Tane,<br>
+                    of Rongo,<br>
+                    of Tangaroa,<br>
+                    of Maru.<br>
+                    I acknowledge the sky father who is above me,<br>
+                    the earth mother who lies beneath me.<br>
+                    Let this be my commitment to all!<br>
+                    Draw together! Affirm!<br>
                 </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
+                
             </div>
                        
         </div>
