--- a/reservations.html
+++ b/reservations.html
@@ -41,9 +41,7 @@
         <div class="fbc"> <!--uses the flex box container class within the header class-->
             <div>
                 <h1>Reservations</h1>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, iste saepe. 
-                    Impedit exercitationem maiores tenetur architecto provident possimus, 
-                    earum animi delectus qui aspernatur, laborum aut corrupti libero iste. Iusto, velit!
+                <p>Our reservation system allows you to make a booking for dinner, and receive an instant confirmation.
                 </p>
             </div>
         <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
@@ -52,32 +50,102 @@
     <section class="section"> <!--creates the section class-->
         <div class="flex-section"> <!-- uses the flex box container class within the section class -->
             <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
-                <h2>Section 1</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
-                </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">    
+            <!-- iframe and js for the reservation form -->
+                <iframe
+                    id="JotFormIFrame-230031357831851"
+                    title="Reservation Form"
+                    onload="window.parent.scrollTo(0,0)"
+                    allowtransparency="true"
+                    allowfullscreen="true"
+                    allow="geolocation; microphone; camera"
+                    src="https://form.jotform.com/230031357831851"
+                    frameborder="0"
+                    style="min-width: 100%;height:539px;border:none;"
+                    scrolling="no"
+                    >
+                </iframe>
+                <script type="text/javascript">
+                    var ifr = document.getElementById("JotFormIFrame-230031357831851");
+                    if (ifr) {
+                        var src = ifr.src;
+                        var iframeParams = [];
+                        if (window.location.href && window.location.href.indexOf("?") > -1) {
+                        iframeParams = iframeParams.concat(window.location.href.substr(window.location.href.indexOf("?") + 1).split('&'));
+                        }
+                        if (src && src.indexOf("?") > -1) {
+                        iframeParams = iframeParams.concat(src.substr(src.indexOf("?") + 1).split("&"));
+                        src = src.substr(0, src.indexOf("?"))
+                        }
+                        iframeParams.push("isIframeEmbed=1");
+                        ifr.src = src + "?" + iframeParams.join('&');
+                    }
+                    window.handleIFrameMessage = function(e) {
+                        if (typeof e.data === 'object') { return; }
+                        var args = e.data.split(":");
+                        if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); }
+                        if (!iframe) { return; }
+                        switch (args[0]) {
+                        case "scrollIntoView":
+                            iframe.scrollIntoView();
+                            break;
+                        case "setHeight":
+                            iframe.style.height = args[1] + "px";
+                            break;
+                        case "collapseErrorPage":
+                            if (iframe.clientHeight > window.innerHeight) {
+                            iframe.style.height = window.innerHeight + "px";
+                            }
+                            break;
+                        case "reloadPage":
+                            window.location.reload();
+                            break;
+                        case "loadScript":
+                            if( !window.isPermitted(e.origin, ['jotform.com', 'jotform.pro']) ) { break; }
+                            var src = args[1];
+                            if (args.length > 3) {
+                                src = args[1] + ':' + args[2];
+                            }
+                            var script = document.createElement('script');
+                            script.src = src;
+                            script.type = 'text/javascript';
+                            document.body.appendChild(script);
+                            break;
+                        case "exitFullscreen":
+                            if      (window.document.exitFullscreen)        window.document.exitFullscreen();
+                            else if (window.document.mozCancelFullScreen)   window.document.mozCancelFullScreen();
+                            else if (window.document.mozCancelFullscreen)   window.document.mozCancelFullScreen();
+                            else if (window.document.webkitExitFullscreen)  window.document.webkitExitFullscreen();
+                            else if (window.document.msExitFullscreen)      window.document.msExitFullscreen();
+                            break;
+                        }
+                        var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
+                        if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
+                        var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
+                        iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
+                        }
+                    };
+                    window.isPermitted = function(originUrl, whitelisted_domains) {
+                        var url = document.createElement('a');
+                        url.href = originUrl;
+                        var hostname = url.hostname;
+                        var result = false;
+                        if( typeof hostname !== 'undefined' ) {
+                        whitelisted_domains.forEach(function(element) {
+                            if( hostname.slice((-1 * element.length - 1)) === '.'.concat(element) ||  hostname === element ) {
+                                result = true;
+                            }
+                        });
+                        return result;
+                        }
+                    };
+                    if (window.addEventListener) {
+                        window.addEventListener("message", handleIFrameMessage, false);
+                    } else if (window.attachEvent) {
+                        window.attachEvent("onmessage", handleIFrameMessage);
+                    }
+                </script>
             </div>
-            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
-                <h2>Section 2</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
-                </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
-            </div>
-            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
-                <h2>Section 3</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Voluptatibus facere corporis beatae? Ipsam quae facilis aliquid ratione quam. 
-                    Dolores fugit accusamus dolorem quod laborum beatae molestias ratione tempora minima vitae!
-                </p>
-                <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
-            </div>
+            
                        
         </div>
     </section>
