--- a/hours.html
+++ b/hours.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!--document mode for internet explorer (compatibility)-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Hours</title> <!--the title which displays on the tab/window-->
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
