--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Menu</title> <!--the title which displays on the tab/window-->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
