first run through validator; fixes

--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Contact Us</title> <!--the title which displays on the tab/window-->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <link rel="stylesheet" href="styles/style.css"> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins and FiraSans font-->
@@ -53,7 +53,6 @@
                 <h2>Location</h2>
                 <a href="https://goo.gl/maps/5NHFkrw8cyDpSSz36"><p>1 Island Street,<br> Kerikeri, <br>Bay of Islands</p></a>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d87712.50162159024!2d173.90841626815714!3d-35.215551065187846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0bb73e31b0728b%3A0x500ef6143a2d500!2sKerikeri!5e0!3m2!1sen!2snz!4v1672714908003!5m2!1sen!2snz" 
-                width=50%; 
                 height="450" 
                 style="border:0;" 
                 allowfullscreen="" 
