--- a/hours.html
+++ b/hours.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Hours</title> <!--the title which displays on the tab/window-->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <link rel="stylesheet" href="styles/style.css"> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins and FiraSans font-->
@@ -55,8 +55,7 @@
                     style="border:solid 1px #777" 
                     width="800" 
                     height="600" 
-                    frameborder="0" 
-                    scrolling="no">
+                    >
                 </iframe>
             </div>
         </div>
