--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Home</title> <!--the title which displays on the tab/window-->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <link rel="stylesheet" href="styles/style.css"> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins and FiraSans font-->
@@ -39,7 +39,7 @@
     </nav>
 
     <header class="header"> <!--creates the header class-->
-        <div class="fbc" class="wideimage"> <!--uses the flex box container class within the header class-->
+        <div class="fbc"> <!--uses the flex box container class within the header class-->
             <div>
                 <h1>Welcome to Haukai Restaurant</h1>
                 
@@ -78,9 +78,8 @@
                     height="315" 
                     src="https://www.youtube.com/embed/JAoS5Tv18x4" 
                     title="YouTube video player" 
-                    frameborder="0" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-                    rel=0>
+                    >
                 </iframe>
             </div>
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
