--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
     <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Menu</title> <!--the title which displays on the tab/window-->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <link rel="stylesheet" href="styles/style.css"> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
@@ -294,6 +294,7 @@
                 <img src="images/soft-drink.png"
                     alt="Coloured Soft Drinks in Glasses">
             </div>
+        </div>    
     </section>
     </main>
     <footer>
