--- a/reservations.html
+++ b/reservations.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--makes the width of the page the same as the device's screen-->
     <title>Haukai Restaurant | Reservations</title> <!--the title which displays on the tab/window-->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="styles/style.css" /> <!-- links to the stylesheet in the styles folder-->
+    <link rel="stylesheet" href="styles/style.css"> <!-- links to the stylesheet in the styles folder-->
     <link rel="preconnect" href="https://fonts.googleapis.com"> <!--tells the browser that its likely to need this resource so the UX can be improved by preemptively initiating this connection-->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins&display=swap" rel="stylesheet"> <!--allows the use of Poppins and FiraSans font-->
@@ -60,12 +60,12 @@
                     allowfullscreen="true"
                     allow="geolocation; microphone; camera"
                     src="https://form.jotform.com/230031357831851"
-                    frameborder="0"
-                    style="min-width: 100%;height:539px;border:none;"
                     scrolling="no"
+                    style="min-width: 100%;height:539px;border:none;"
+                    
                     >
                 </iframe>
-                <script type="text/javascript">
+                <script>
                     var ifr = document.getElementById("JotFormIFrame-230031357831851");
                     if (ifr) {
                         var src = ifr.src;
