2nd run through validator

--- a/reservations.html
+++ b/reservations.html
@@ -50,14 +50,14 @@
     </header>
     <section class="section"> <!--creates the section class-->
         <div class="flex-section"> <!-- uses the flex box container class within the section class -->
-            <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
+            <div class="sectionpart" id="resform"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
             <!-- iframe and js for the reservation form -->
+                <h2>Reservation Form</h2>
                 <iframe
                     id="JotFormIFrame-230031357831851"
                     title="Reservation Form"
                     onload="window.parent.scrollTo(0,0)"
-                    allowtransparency="true"
-                    allowfullscreen="true"
+                    allowfullscreen
                     allow="geolocation; microphone; camera"
                     src="https://form.jotform.com/230031357831851"
                     scrolling="no"
