fixed validation issue on contacxt page iframe

--- a/contact.html
+++ b/contact.html
@@ -52,10 +52,9 @@
             <div class="sectionpart"> <!--dividing the container into parts parts so it's easier to arrange things on the page-->
                 <h2>Location and Contact Details</h2>
                 <p><a href="https://goo.gl/maps/5NHFkrw8cyDpSSz36">1 Island Street,<br> Kerikeri, <br>Bay of Islands<br></a><a href="tel:094014019">09 401 4019</a></p>
-                
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d87712.50162159024!2d173.90841626815714!3d-35.215551065187846!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0bb73e31b0728b%3A0x500ef6143a2d500!2sKerikeri!5e0!3m2!1sen!2snz!4v1672714908003!5m2!1sen!2snz" 
-                width="500vw"
-                height="450px" 
+                width="500"
+                height="450" 
                 style="border:0" 
                 allowfullscreen
                 loading="lazy" 
