--- a/reservations.html
+++ b/reservations.html
@@ -45,7 +45,7 @@
                 <p>Our reservation system allows you to make a booking for dinner, and receive an instant confirmation.
                 </p>
             </div>
-        <img src="https://via.placeholder.com/500x300/000000/FFFFFF/?text=Placeholder+Image" alt="Alt text here">
+        <img src="images/reservations.jpg" alt="Reserved placard on table">
         </div>
     </header>
     <section class="section"> <!--creates the section class-->
@@ -61,8 +61,6 @@
                     allow="geolocation; microphone; camera"
                     src="https://form.jotform.com/230031357831851"
                     scrolling="no"
-                    style="min-width: 100%;height:539px;border:none;"
-                    
                     >
                 </iframe>
                 <script>
