--- a/hours.html
+++ b/hours.html
@@ -51,6 +51,7 @@
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>Hours of Operation</h2>
                 <iframe 
+                    title="Google Calendar showing hours of operation"
                     src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=Pacific%2FAuckland&showTitle=0&showNav=1&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&mode=AGENDA&src=MTQ0Y2M1ODA5YTEyNGVkOGM4YmZiMWYxMGVlY2FiYzA2ZWU4ZTRkNWEwZGYyMmNlMTZhNmY4Njc2OWE1MDc5YUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23C0CA33" 
                     style="border:solid 1px #777" 
                     width="800" 
