paragraph text alignment

--- a/menu.html
+++ b/menu.html
@@ -130,7 +130,7 @@
                     <p>Lamont Riesling, 2010, Otago - 57/13</p>
                     <p>Elephant Hill Viognier, 2013, Hawke's Bay - 55/12</p>
                     <p>Folium Sauvignon Blanc, 2011, Marlborough - 52/11</p>
-                    <p>Billecart-Salmon Brut Reserve, France - 120</p>
+                    <p>Billecart-Salmon Brut Reserve, France - 120/-</p>
                 </div>
                 <img src="images/white-wine.jpg"
                     alt="White Wine in Glasses">
