change link text to be more descriptive (A rating)

--- a/menu.html
+++ b/menu.html
@@ -51,10 +51,8 @@
                     sourced, indigenous ingredients to create authentic dishes that honor the traditions and heritage of
                     Aotearoa. From classic favorites to contemporary creations, our menu has something for everyone to
                     enjoy.<br><br>
-                    If you prefer a downloadable version of our menu, it is available <a href="Haukai_Menu.pdf" aria-label="Downloadable Menu Link">here</a>.
+                    If you prefer a downloadable version of our menu, it is available here: <a href="Haukai_Menu.pdf" aria-label="Downloadable Menu Link">View pdf menu</a>.
                 </p>
-                
-            
             <img src="images/kumara.png" alt="Fresh Kumara">
         </div>
     </header>
