--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <h1>Welcome to Haukai Restaurant</h1>
                 
             </div>
-        <img src="images/header_image.jpeg" alt="Image of restaurant outside">
+        <img src="images/header_image.webp" alt="Image of restaurant outside">
         </div>
     </header>
     <section class="section"> <!--creates the section class-->
@@ -54,7 +54,7 @@
                 <p>
                     Welcome to our restaurant, where we proudly celebrate the unique flavors and traditions of Māori and Pakeha cuisine. Our menu features a diverse range of dishes that draw inspiration from both indigenous and European culinary traditions, bringing together the best of both worlds. Our chefs are passionate about using fresh, local ingredients to create dishes that are both delicious and true to their cultural roots. We look forward to sharing a taste of Māori and Pakeha culture with you. 
                 </p>
-                <img src="images/haukai_interior.png" alt="Image of restaurant inside">    
+                <img src="images/haukai_interior.webp" alt="Image of restaurant inside">    
             </div>
             <div class="sectionpart"> <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>Karakia mō te Kai</h2>
