--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     src="https://www.youtube.com/embed/JAoS5Tv18x4" 
                     title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+                    loading="lazy"
                     >
                 </iframe>
             </div>
