--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
         <div class="fbc"> <!--uses the flex box container class within the header class-->
             
                 <h1>Menu</h1>
-                <p>Discover the delicious world of Maori cuisine at our restaurant. We pride ourselves on using locally
+                <p>Discover the delicious world of Māori cuisine at our restaurant. We pride ourselves on using locally
                     sourced, indigenous ingredients to create authentic dishes that honor the traditions and heritage of
                     Aotearoa. From classic favorites to contemporary creations, our menu has something for everyone to
                     enjoy.<br><br>
