--- a/reservations.html
+++ b/reservations.html
@@ -14,7 +14,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--could we also use rel="preload" ?-->
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&family=Poppins&display=swap" rel="stylesheet">
     <!--allows the use of Poppins and FiraSans font-->
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0H9TMX9MKK"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+         gtag('js', new Date());
+        gtag('config', 'G-0H9TMX9MKK');
+    </script>
 </head>
 
 <body>
