add staff roster page

--- a/hours.html
+++ b/hours.html
@@ -46,6 +46,9 @@
                 <li>
                     <a href=contact.html>Contact</a>
                 </li>
+                <li>
+                    <a href=.\private\roster.html>Staff</a>
+                </li>
             </ul>
         </div>
     </nav>
