--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <li>
                         <a href=contact.html>Contact</a>
                     </li>
+                    <li>
+                        <a href=private\roster.html>Staff</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -59,7 +62,7 @@
                     <h1>Welcome to Haukai Restaurant</h1>
 
                 </div>
-                <img src="images/header_image.webp" alt="Image of restaurant outside">
+                <img src="images/header_image.webp" alt="Outdoor setting at Haukai Restaurant">
             </div>
         </header>
         <section class="section"> <!--creates the section class-->
@@ -75,7 +78,7 @@
                         delicious and true to their cultural roots. We look forward to sharing a taste of Māori and
                         Pakeha culture with you.
                     </p>
-                    <img src="images/haukai_interior.webp" alt="Image of restaurant inside">
+                    <img src="images/haukai_interior.webp" alt="Image of restaurant inside"> <!-- leaving alt text non compliant with WCAG to show use of Web Accessibility plugin-->
                 </div>
                 <div class="sectionpart">
                     <!--dividing the container into parts so it's easier to arrange things on the page-->
