minor change to roster iframe

--- a/private/roster.html
+++ b/private/roster.html
@@ -68,8 +68,8 @@
                 <!--dividing the container into parts so it's easier to arrange things on the page-->
                 <h2>Staff Roster</h2>
                 <iframe
-                src="https://docs.google.com/spreadsheets/d/1_Z65Gn6S8_QX1lUTXgKoNuHNBfbdg1NfO3h9rheuZis/edit?usp=sharing?widget=true&amp;headers=false&amp;rm=minimal" 
-                style="border:solid 1px #777" width="1000" height="600"></iframe>
+                src="https://docs.google.com/spreadsheets/d/1_Z65Gn6S8_QX1lUTXgKoNuHNBfbdg1NfO3h9rheuZis/edit?usp=sharing?widget=false&amp;headers=false&amp;rm=minimal&amp;chrome=false" 
+                style="border:solid 1px #777" width="1000" height="600">
                 </iframe>
             </div>
         </div>
