added additional staff member phone number

--- a/private/roster.html
+++ b/private/roster.html
@@ -72,6 +72,19 @@
                 style="border:solid 1px #777" width="1000" height="600">
                 </iframe>
             </div>
+            <div class="sectionpart">
+                <!--dividing the container into parts so it's easier to arrange things on the page-->
+                <h2>Staff Contact Details</h2>
+                <div class="column">
+                    <p>Restaurant - <a href="tel:09 401 4019">09 401 4019</a></p>
+                    <p>Suzy - <a href="tel:021 123 4567">021 123 4567</a></p>
+                    <p>Michelle - <a href="tel:027 555 6521">027 555 6521</a></p>
+                    <p>John - <a href="tel:022 885 63215">022 885 63215</a></p>
+                    <p>Rodrigo - <a href="tel:04 525 8214">04 525 8214</a></p>
+                    <p>Kate - <a href="tel:021 684 36584">021 684 36584</a></p>
+                </div>
+                
+            </div>
         </div>
     </section>
     <footer>
